==> dowhile98/OTA_Consulting/Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/hardware/apm32f4xx/apm32f4xx_crypto_cipher.c <==
#define TRACE_LEVEL CRYPTO_TRACE_LEVEL
#include "apm32f4xx.h"
#include "apm32f4xx_rcm.h"
#include "core/crypto.h"
#include "hardware/apm32f4xx/apm32f4xx_crypto.h"
#include "hardware/apm32f4xx/apm32f4xx_crypto_cipher.h"
#include "cipher/cipher_algorithms.h"
#include "cipher_modes/cipher_modes.h"
#include "debug.h"

void aesLoadKey(AesContext *context)
{
   uint32_t temp;

   //Read control register
   temp = CRYP->CTRL & ~CRYP_CTRL_KSIZESEL;

   //Check the length of the key
   if(context->nr == 10)
   {
      //10 rounds are required for 128-bit key
      CRYP->CTRL = temp | CRYP_CTRL_KSIZESEL_128B;

      //Set the 128-bit encryption key
      CRYP->K2L = context->ek[0];
      CRYP->K2R = context->ek[1];
      CRYP->K3L = context->ek[2];
      CRYP->K3R = context->ek[3];
   }
   else if(context->nr == 12)
   {
      //12 rounds are required for 192-bit key
      CRYP->CTRL = temp | CRYP_CTRL_KSIZESEL_192B;

      //Set the 192-bit encryption key
      CRYP->K1L = context->ek[0];
      CRYP->K1R = context->ek[1];
      CRYP->K2L = context->ek[2];
      CRYP->K2R = context->ek[3];
      CRYP->K3L = context->ek[4];
      CRYP->K3R = context->ek[5];
   }
   else
   {
      //14 rounds are required for 256-bit key
      CRYP->CTRL = temp | CRYP_CTRL_KSIZESEL_256B;

      //Set the 256-bit encryption key
      CRYP->K0L = context->ek[0];
      CRYP->K0R = context->ek[1];
      CRYP->K1L = context->ek[2];
      CRYP->K1R = context->ek[3];
      CRYP->K2L = context->ek[4];
      CRYP->K2R = context->ek[5];
      CRYP->K3L = context->ek[6];
      CRYP->K3R = context->ek[7];
   }
}

void aesProcessData(AesContext *context, uint8_t *iv, const uint8_t *input,
   uint8_t *output, size_t length, uint32_t mode)
{
   uint32_t temp;

   //Acquire exclusive access to the CRYP module
   osAcquireMutex(&apm32f4xxCryptoMutex);

   //Configure the data type
   CRYP->CTRL = CRYP_CTRL_DTSEL_8B;

   //AES-ECB or AES-CBC decryption?
   if((mode & CRYP_CTRL_ALGODIRSEL) != 0)
   {
      //Configure the key preparation mode by setting the ALGOMODE bits to '111'
      CRYP->CTRL |= CRYP_CTRL_ALGOMSEL_AES_KEY;
      //Set encryption key
      aesLoadKey(context);
      //Write the CRYPEN bit to 1
      CRYP->CTRL |= CRYP_CTRL_CRYPEN;

      //Wait until BUSY returns to 0
      while((CRYP->STS & CRYP_STS_BUSY) != 0)
      {
      }

      //The algorithm must be configured once the key has been prepared
      temp = CRYP->CTRL & ~CRYP_CTRL_ALGOMSEL;
      CRYP->CTRL = temp | mode;
   }
   else
   {
      //Configure the algorithm and chaining mode
      CRYP->CTRL |= mode;
      //Set encryption key
      aesLoadKey(context);
   }

   //Valid initialization vector?
   if(iv != NULL)
   {
      //Set initialization vector
      CRYP->IV0L = LOAD32BE(iv);
      CRYP->IV0R = LOAD32BE(iv + 4);
      CRYP->IV1L = LOAD32BE(iv + 8);
      CRYP->IV1R = LOAD32BE(iv + 12);
   }

   //Flush the input and output FIFOs
   CRYP->CTRL |= CRYP_CTRL_FFLUSH;
   //Enable the cryptographic processor
   CRYP->CTRL |= CRYP_CTRL_CRYPEN;

   //Process data
   while(length >= AES_BLOCK_SIZE)
   {
      //Wait for the input FIFO to be ready to accept data
      while((CRYP->STS & CRYP_STS_IFFULL) == 0)
      {
      }

      //Write the input FIFO
      CRYP->DATAIN = __UNALIGNED_UINT32_READ(input);
      CRYP->DATAIN = __UNALIGNED_UINT32_READ(input + 4);
      CRYP->DATAIN = __UNALIGNED_UINT32_READ(input + 8);
      CRYP->DATAIN = __UNALIGNED_UINT32_READ(input + 12);

      //Wait for the output to be ready
      while((CRYP->STS & CRYP_STS_OFEMPT) == 0)
      {
      }

      //Read the output FIFO
      temp = CRYP->DATAOUT;
      __UNALIGNED_UINT32_WRITE(output, temp);
      temp = CRYP->DATAOUT;
      __UNALIGNED_UINT32_WRITE(output + 4, temp);
      temp = CRYP->DATAOUT;
      __UNALIGNED_UINT32_WRITE(output + 8, temp);
      temp = CRYP->DATAOUT;
      __UNALIGNED_UINT32_WRITE(output + 12, temp);

      //Next block
      input += AES_BLOCK_SIZE;
      output += AES_BLOCK_SIZE;
      length -= AES_BLOCK_SIZE;
   }

   //Process final block of data
   if(length > 0)
   {
      uint32_t buffer[4];

      //Copy partial block
      osMemset(buffer, 0, AES_BLOCK_SIZE);
      osMemcpy(buffer, input, length);

      //Wait for the input FIFO to be ready to accept data
      while((CRYP->STS & CRYP_STS_IFFULL) == 0)
      {
      }

      //Write input block
      CRYP->DATAIN = buffer[0];
      CRYP->DATAIN = buffer[1];
      CRYP->DATAIN = buffer[2];
      CRYP->DATAIN = buffer[3];

      //Wait for the output to be ready
      while((CRYP->STS & CRYP_STS_OFEMPT) == 0)
      {
      }

      //Read output block
      buffer[0] = CRYP->DATAOUT;
      buffer[1] = CRYP->DATAOUT;
      buffer[2] = CRYP->DATAOUT;
      buffer[3] = CRYP->DATAOUT;

      //Copy partial block
      osMemcpy(output, buffer, length);
   }

   //Valid initialization vector?
   if(iv != NULL)
   {
      //Update the value of the initialization vector
      temp = CRYP->IV0L;
      STORE32BE(temp, iv);
      temp = CRYP->IV0R;
      STORE32BE(temp, iv + 4);
      temp = CRYP->IV1L;
      STORE32BE(temp, iv + 8);
      temp = CRYP->IV1R;
      STORE32BE(temp, iv + 12);
   }

   //Disable the cryptographic processor by clearing the CRYPEN bit
   CRYP->CTRL = 0;

   //Release exclusive access to the CRYP module
   osReleaseMutex(&apm32f4xxCryptoMutex);
}

error_t ecbEncrypt(const CipherAlgo *cipher, void *context,
   const uint8_t *p, uint8_t *c, size_t length)
{
   error_t error;

   //Initialize status code
   error = NO_ERROR;

#if (DES_SUPPORT == ENABLED)
   //DES cipher algorithm?
   if(cipher == DES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         desProcessData(context, NULL, p, c, length, CRYP_CTRL_ALGOMSEL_DES_ECB);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (DES3_SUPPORT == ENABLED)
   //Triple DES cipher algorithm?
   if(cipher == DES3_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES3_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         des3ProcessData(context, NULL, p, c, length, CRYP_CTRL_ALGOMSEL_TDES_ECB);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (AES_SUPPORT == ENABLED)
   //AES cipher algorithm?
   if(cipher == AES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % AES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         aesProcessData(context, NULL, p, c, length, CRYP_CTRL_ALGOMSEL_AES_ECB);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
   //Unknown cipher algorithm?
   {
      //ECB mode operates in a block-by-block fashion
      while(length >= cipher->blockSize)
      {
         //Encrypt current block
         cipher->encryptBlock(context, p, c);

         //Next block
         p += cipher->blockSize;
         c += cipher->blockSize;
         length -= cipher->blockSize;
      }

      //The length of the payload must be a multiple of the block size
      if(length != 0)
      {
         error = ERROR_INVALID_LENGTH;
      }
   }

   //Return status code
   return error;
}

error_t cbcEncrypt(const CipherAlgo *cipher, void *context,
   uint8_t *iv, const uint8_t *p, uint8_t *c, size_t length)
{
   error_t error;

   //Initialize status code
   error = NO_ERROR;

#if (DES_SUPPORT == ENABLED)
   //DES cipher algorithm?
   if(cipher == DES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         desProcessData(context, iv, p, c, length, CRYP_CTRL_ALGOMSEL_DES_CBC);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (DES3_SUPPORT == ENABLED)
   //Triple DES cipher algorithm?
   if(cipher == DES3_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES3_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         des3ProcessData(context, iv, p, c, length, CRYP_CTRL_ALGOMSEL_TDES_CBC);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (AES_SUPPORT == ENABLED)
   //AES cipher algorithm?
   if(cipher == AES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % AES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         aesProcessData(context, iv, p, c, length, CRYP_CTRL_ALGOMSEL_AES_CBC);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
   //Unknown cipher algorithm?
   {
      size_t i;

      //CBC mode operates in a block-by-block fashion
      while(length >= cipher->blockSize)
      {
         //XOR input block with IV contents
         for(i = 0; i < cipher->blockSize; i++)
         {
            c[i] = p[i] ^ iv[i];
         }

         //Encrypt the current block based upon the output of the previous
         //encryption
         cipher->encryptBlock(context, c, c);

         //Update IV with output block contents
         osMemcpy(iv, c, cipher->blockSize);

         //Next block
         p += cipher->blockSize;
         c += cipher->blockSize;
         length -= cipher->blockSize;
      }

      //The length of the payload must be a multiple of the block size
      if(length != 0)
      {
         error = ERROR_INVALID_LENGTH;
      }
   }

   //Return status code
   return error;
}
